test/data/resolver/valid/undirected_single_match.cypher
MATCH (p:Person)-[r:LIKES]-(post:Post) RETURN r
