test/data/resolver/invalid/unknown_edge_undirected.cypher
MATCH (p:Person)-[r:KNOWS]-(post:Post) RETURN r
